# libdnf-cpp-proof-of-concept

./: .clang-format  .gitignore  CMakeLists.txt  README  TODO  clang-format.sh  libdnf_cpp.spec  run.sh
cmake/modules/: FindGLIB.cmake
cmake_modules/: FindCPPUNIT.cmake
doc/: CMakeLists.txt  conf.py  conf.py.in  index.rst
libdnf/: CMakeLists.txt  package.hpp  package.i  pylibdnf.i  repo.cpp  repo.hpp  repo.i  swdb.hpp  swdb.i
libdnf/bgettext/: CMakeLists.txt  bgettext-common.h  bgettext-lib.h  bgettext.c  bgettext.h
libdnf/package/: CMakeLists.txt  modulepackage.cpp  modulepackage.hpp  package.hpp  rpmpackage.hpp
libdnf/repo/: CMakeLists.txt  repo-private.hpp  repo.cpp  repo.hpp  repodict.cpp  repodict.hpp
libdnf/swdb/: CMakeLists.txt  package.cpp  package.hpp
libdnf/swdb/dnf-swdb/: CMakeLists.txt  dnf-swdb-pkg.c  dnf-swdb-pkg.h
tests/: CMakeLists.txt  run_tests.cpp
tests/package/: CMakeLists.txt  ModulePackageTest.cpp  ModulePackageTest.hpp
tests/python/: CMakeLists.txt  run_tests.py.in  test_repo.py  test_swdb.py
