FIND_PACKAGE (SWIG REQUIRED)


INCLUDE (UseSWIG)
INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES ("${PROJECT_BINARY_DIR}")


SET (LIBDNF_SOURCES
        repo.cpp
)

SET (LIBDNF_HEADERS
        package.hpp
        repo.hpp
)


ADD_LIBRARY (libdnf SHARED ${LIBDNF_SOURCES})
SET (DNF_SO_VERSION 1)
SET_TARGET_PROPERTIES (libdnf PROPERTIES OUTPUT_NAME "dnf")
SET_TARGET_PROPERTIES (libdnf PROPERTIES SOVERSION ${DNF_SO_VERSION})


SET_SOURCE_FILES_PROPERTIES (package.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES (repo.i PROPERTIES CPLUSPLUS ON)
# SWIG_ADD_LIBRARY doesn't work on RHEL 7 (cmake 2.8.12.2), use SWIG_ADD_MODULE instead
# Example: SWIG_ADD_LIBRARY (pylibdnf LANGUAGE python SOURCES pylibdnf.i)
SWIG_ADD_MODULE (pylibdnf python package.i repo.i)
SWIG_LINK_LIBRARIES (pylibdnf libdnf)
SWIG_LINK_LIBRARIES (pylibdnf ${PYTHON_LIBRARY})
