FIND_PACKAGE (SWIG REQUIRED)


INCLUDE (UseSWIG)
INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES ("${PROJECT_BINARY_DIR}")

SET (LIBDNF_HEADERS
        ${LIBDNF_HEADERS}
        package.hpp
        repo.hpp
        swdb.hpp
        )

ADD_SUBDIRECTORY(repo)
ADD_SUBDIRECTORY(package)

INCLUDE_DIRECTORIES ("swdb")
ADD_SUBDIRECTORY ("swdb")

ADD_LIBRARY (libdnf SHARED ${LIBDNF_SOURCES} ${LIBDNF_HEADERS})
SET (DNF_SO_VERSION 1)
SET_TARGET_PROPERTIES (libdnf PROPERTIES OUTPUT_NAME "dnf")
SET_TARGET_PROPERTIES (libdnf PROPERTIES SOVERSION ${DNF_SO_VERSION})

TARGET_LINK_LIBRARIES(
    libdnf
    ${GLIB_LIBRARIES}
    ${GLIB_GOBJECT_LIBRARIES}
    ${GLIB_GIO_LIBRARIES}
    ${GLIB_GIO_UNIX_LIBRARIES})

# SWIG_ADD_LIBRARY doesn't work on RHEL 7 (cmake 2.8.12.2), use SWIG_ADD_MODULE instead
# Example: SWIG_ADD_LIBRARY (pylibdnf LANGUAGE python SOURCES pylibdnf.i)


SET_SOURCE_FILES_PROPERTIES (repo.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE (repo python repo.i)
SWIG_LINK_LIBRARIES (repo libdnf)
SWIG_LINK_LIBRARIES (repo ${PYTHON_LIBRARY})

SET_SOURCE_FILES_PROPERTIES (package.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE (package python package.i)
SWIG_LINK_LIBRARIES (package libdnf)
SWIG_LINK_LIBRARIES (package ${PYTHON_LIBRARY})

SET_SOURCE_FILES_PROPERTIES (swdb.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE (swdb python swdb.i)
SWIG_LINK_LIBRARIES (swdb libdnf)
SWIG_LINK_LIBRARIES (swdb ${PYTHON_LIBRARY})
