set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")
FIND_PACKAGE(CPPUNIT REQUIRED)

INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIR})

INCLUDE_DIRECTORIES(package)
ADD_SUBDIRECTORY ("package")
ADD_SUBDIRECTORY ("python")

SET (LIBDNF_TEST_SOURCES
        ${LIBDNF_TEST_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/run_tests.cpp
        )

ADD_EXECUTABLE(run_tests ${LIBDNF_TEST_SOURCES} ${LIBDNF_TEST_HEADERS})
SET_TARGET_PROPERTIES(run_tests PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${COMMON_RUNTIME_OUTPUT_DIRECTORY}")
TARGET_LINK_LIBRARIES(run_tests libdnf cppunit)

ADD_TEST(NAME test_cpp COMMAND ${CMAKE_SOURCE_DIR}/bin/run_tests DEPENDS run_tests COMMENT "Running CPPUNIT tests...")