SET(DNF_SWDB_DIR
    ${CMAKE_CURRENT_SOURCE_DIR}/dnf-swdb
)

SET(DNF_SWDB_SOURCES
    ${DNF_SWDB_DIR}/dnf-swdb-pkg.c
)

SET(LIBDNF_SOURCES
    ${LIBDNF_SOURCES}
    ${DNF_SWDB_SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/package.cpp
    PARENT_SCOPE
)

INCLUDE_DIRECTORIES ("dnf-swdb")
ADD_SUBDIRECTORY ("dnf-swdb")
